mpri242/test/bad/mismatch1.f
(* Basic type mismatch. *)
program
let identity [ a ] (x : a) : a -> a = x in
identity
